--- a/src/components/nav/Socials.css
+++ b/src/components/nav/Socials.css
@@ -7,7 +7,7 @@
    gap: 0.8rem;
    position: fixed;
    z-index: 3000;
-   left: -2rem;
+   left: 2.1rem;
    bottom: 3rem;
 }
 
@@ -21,7 +21,7 @@
 
 .nav__socials::after {
    content: '';
-   width: 0.09em;
+   width: 0.08em;
    height: 4.2rem;
    background: var(--color-dark)
 }
@@ -30,72 +30,16 @@
 @media screen and (max-width: 600px) {
    .nav__socials {
       
-      left: -2.9rem;
+      left: 1.2rem;
       
    }
 }
 
-.theme-switch-wrapper {
-   display: flex;
-   margin: 2rem;
-   align-items: center;
-   rotate: 90deg;
- }
 
- .theme-switch-wrapper em {
-   font-size: 0.8rem;
-   rotate: 180deg;
 
-   padding-bottom: 0.5rem;
- }
 
- .theme-switch {
-   display: inline-block;
-   height: 17px;
-   position: relative;
-   width: 40px;
-   bottom: -5px;
-   right: 25px;
- }
- 
- .theme-switch input {
-   display:none;
- }
- 
- .slider {
-   background-color: #ccc;
-   bottom: 0;
+
+.theme-toggle i {
    cursor: pointer;
-   left: 0;
-   position: absolute;
-   right: 0;
-   top: 0;
-   transition: .4s;
- }
- 
- .slider:before {
-   background-color: #fff;
-   bottom: 2.3px;
-   content: "";
-   height: 12px;
-   left: 3.5px;
-   position: absolute;
-   transition: .4s;
-   width: 12px;
- }
- 
- input:checked + .slider {
-   background-color: #c81663;
- }
- 
- input:checked + .slider:before {
-   transform: translateX(21px);
- }
- 
- .slider.round {
-   border-radius: 34px;
- }
- 
- .slider.round:before {
-   border-radius: 50%;
- }
+}
+
